--- a/kitchen.yml
+++ b/kitchen.yml
@@ -2,31 +2,22 @@
 driver:
   name: vagrant
 
-## The forwarded_port port feature lets you connect to ports on the VM guest via
-## localhost on the host.
-## see also: https://www.vagrantup.com/docs/networking/forwarded_ports.html
-
-#  network:
-#    - ["forwarded_port", {guest: 80, host: 8080}]
-
 provisioner:
   name: chef_zero
-
-  ## product_name and product_version specifies a specific Chef product and version to install.
-  ## see the Chef documentation for more details: https://docs.chef.io/config_yml_kitchen.html
-  #  product_name: chef
-  #  product_version: 15
+  client_rb:
+    data_collector.server_url: 'https://chef-automate.totallygeeked.com/data-collector/v0/'
+    data_collector.token: 'E36jw2AQMvVnyxiSE-qJKnNdtaw='
 
 verifier:
   name: inspec
 
 platforms:
-  - name: ubuntu-18.04
-  - name: centos-8
+  # - name: ubuntu-18.04
+  - name: centos-7
 
 suites:
-  - name: default
+  - name: audit-test
     verifier:
       inspec_tests:
-        - test/integration/default
+        # - test/integration/default
     attributes:
